core/shotcore/include/shotcore.h

/* Returns the core version. Free with shotcore_string_free. */
char *shotcore_version(void);
/* Free a string previously returned by this library. */
void shotcore_string_free(char *ptr);
/* Create a new empty annotation document as JSON. Free with shotcore_string_free. */
char *shotcore_document_new(uint32_t width, uint32_t height);
/* Flatten image_path + doc_json into a composited PNG at out_path. font_path may be NULL. */
int shotcore_export_png(const char *image_path, const char *doc_json, const char *out_path, const char *font_path);
/* Wrap in_path per options_json (BeautifyOptions) and write to out_path. */
int shotcore_beautify_png(const char *in_path, const char *out_path, const char *options_json);
/* Beautify with aspect-ratio framing + 9-point alignment. options_json: {"beautify":<opts>,"aspect_w":u32,"aspect_h":u32,"align":0..8}. */
int shotcore_beautify_framed_png(const char *in_path, const char *out_path, const char *options_json);
/* Resolve a drag selection against a VirtualDesktop JSON; returns CaptureRegion JSON or NULL. */
char *shotcore_resolve_selection(const char *desktop_json, double x, double y, double w, double h);
/* Search a HistoryStore JSON; returns a JSON array of matching entries or NULL. */
char *shotcore_history_search(const char *store_json, const char *query);
/* Verify a license token against a hex public key at unix time now. Returns a status code. */
int shotcore_license_verify(const char *public_key_hex, const char *token, int64_t now);
/* Detect sensitive data in ocr_json and return doc_json with Redact annotations added. style: 0 blur, 1 pixelate. */
char *shotcore_auto_redact_into(const char *doc_json, const char *ocr_json, uint32_t style, uint32_t strength);
/* Apply a JSON-described fx op (grayscale/sepia/invert/blur/vignette/brightness/contrast/flip/rotate/resize/scale/crop/spotlight/border/jpeg) from in_path to out_path. Returns a status code. */
int shotcore_fx_apply(const char *in_path, const char *out_path, const char *op_json);