apps/windows/SloerShot.App/Interop/ShotCore.cs

// P/Invoke bindings to the shotcore shared library (C ABI: core/shotcore/src/ffi.rs).
// The native shotcore.dll must sit next to the executable (see the .csproj copy step).
#nullable enable
using System;
using System.Runtime.InteropServices;

namespace SloerShot.Interop;

/// <summary>Thin managed wrapper over the shotcore C ABI.</summary>
public static class ShotCore
{
    private const string Lib = "shotcore";

    public const int Ok = 0;
    public const int ErrArg = -1;
    public const int ErrJson = -3;
    public const int ErrImage = -4;
    public const int ErrLicense = -5;
    public const int ErrExpired = -6;

    [DllImport(Lib, EntryPoint = "shotcore_version")]
    private static extern IntPtr VersionRaw();

    [DllImport(Lib, EntryPoint = "shotcore_string_free")]
    private static extern void StringFree(IntPtr ptr);

    [DllImport(Lib, EntryPoint = "shotcore_document_new")]
    private static extern IntPtr DocumentNewRaw(uint width, uint height);

    [DllImport(Lib, EntryPoint = "shotcore_export_png", CharSet = CharSet.Ansi)]
    private static extern int ExportPngRaw(string imagePath, string docJson, string outPath, string? fontPath);

    [DllImport(Lib, EntryPoint = "shotcore_beautify_png", CharSet = CharSet.Ansi)]
    private static extern int BeautifyPngRaw(string inPath, string outPath, string optionsJson);
 [DllImport(Lib, EntryPoint = "shotcore_beautify_framed_png", CharSet = CharSet.Ansi)]
 private static extern int BeautifyFramedRaw(string inPath, string outPath, string optionsJson);

    [DllImport(Lib, EntryPoint = "shotcore_resolve_selection", CharSet = CharSet.Ansi)]
    private static extern IntPtr ResolveSelectionRaw(string desktopJson, double x, double y, double w, double h);

    [DllImport(Lib, EntryPoint = "shotcore_history_search", CharSet = CharSet.Ansi)]
    private static extern IntPtr HistorySearchRaw(string storeJson, string query);

    [DllImport(Lib, EntryPoint = "shotcore_license_verify", CharSet = CharSet.Ansi)]
    private static extern int LicenseVerifyRaw(string publicKeyHex, string token, long now);

    // Marshal a returned UTF-8 char* into a managed string, then free the native buffer.
    private static string? TakeString(IntPtr ptr)
    {
        if (ptr == IntPtr.Zero) return null;
        try { return Marshal.PtrToStringUTF8(ptr); }
        finally { StringFree(ptr); }
    }

    public static string Version() => TakeString(VersionRaw()) ?? "unknown";

    public static string? NewDocument(uint width, uint height) => TakeString(DocumentNewRaw(width, height));

    public static int Export(string imagePath, string docJson, string outPath, string? fontPath = null)
        => ExportPngRaw(imagePath, docJson, outPath, fontPath);

    public static int Beautify(string inPath, string outPath, string optionsJson)
        => BeautifyPngRaw(inPath, outPath, optionsJson);
 public static int BeautifyFramed(string inPath, string outPath, string optionsJson)
 => BeautifyFramedRaw(inPath, outPath, optionsJson);

    public static string? ResolveSelection(string desktopJson, double x, double y, double w, double h)
        => TakeString(ResolveSelectionRaw(desktopJson, x, y, w, h));

    public static string? HistorySearch(string storeJson, string query)
        => TakeString(HistorySearchRaw(storeJson, query));

    public static int VerifyLicense(string publicKeyHex, string token, long now)
        => LicenseVerifyRaw(publicKeyHex, token, now);

    // ---- Smart auto-redaction ----
    [DllImport(Lib, EntryPoint = "shotcore_auto_redact_into", CharSet = CharSet.Ansi)]
    private static extern IntPtr AutoRedactIntoRaw(string docJson, string ocrJson, uint style, uint strength);
    public static string? AutoRedactInto(string docJson, string ocrJson, uint style, uint strength)
        => TakeString(AutoRedactIntoRaw(docJson, ocrJson, style, strength));

    // ---- Effects (fx): apply a JSON-described op via the shared core ----
    [DllImport(Lib, EntryPoint = "shotcore_fx_apply", CharSet = CharSet.Ansi)]
    private static extern int FxApplyRaw(string inPath, string outPath, string opJson);
    /// <summary>Apply a JSON-described fx op (grayscale/sepia/invert/blur/vignette/brightness/contrast/flip/rotate/resize/scale/crop/spotlight/border/jpeg). Returns a status code.</summary>
    public static int FxApply(string inPath, string outPath, string opJson)
        => FxApplyRaw(inPath, outPath, opJson);
